# assistant_intelligent

./: .gitignore  note.txt
backend/: .env  .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10953d0a008d_add_documents_table.py  11dc36039020_add_modules_and_timetable.py  8b2ff8163bf0_init_schema.py
backend/app/: main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py  cors.py  security.py
backend/app/db/: base.py  create_scolarite.py  seed.py  session.py
backend/app/db/models/: __init__.py  document.py  filiere.py  groupe.py  module.py  student.py  teacher.py  timetable_session.py  user.py
backend/app/db/repositories/: document_repo.py  scolarite_repo.py  student_repo.py  user_repo.py
backend/app/modules/auth/: deps.py  router.py  schemas.py  service.py
backend/app/modules/documents/: router.py  schemas.py  service.py
backend/app/modules/rag/: chunker.py  chunking.py  embeddings.py  llm.py  loader.py  router.py  schemas.py  service.py  text_extractor.py  vector_store.py
backend/app/modules/rag/api/: router.py  schemas.py
backend/app/modules/rag/application/: use_cases.py
backend/app/modules/scolarite/: router.py  schemas.py  service.py
backend/app/shared/: exceptions.py  responses.py
backend/assistant_scolarite_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/storage/vector_store/: index.faiss  index__timetable_group_10.faiss  meta.pkl  meta__default.pkl  meta__timetable_group_10.pkl
backend/tests/: debug_meta.py  test_health.py
frontend/: package-lock.json  (+1 more)
(+30 files in other folders)
