[project]
name = "assistant-scolarite-backend"
version = "0.1.0"
description = "RAG + LLM assistant backend (Scolarite)"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",

  # ===== RAG =====
  "sentence-transformers>=2.6",
  "faiss-cpu>=1.8",
  "numpy>=1.26",
  "pypdf>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app", "alembic"]

[tool.setuptools.package-data]
app = ["**/*.json", "**/*.txt"]
